--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "tailwindcss": "^3.4.4",
     "vinxi": "^0.3.11",
     "vite-plugin-cjs-interop": "^2.1.1",
+    "vite-plugin-pwa": "^0.20.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   },
