--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,17 +23,17 @@
     "postcss": "^8.4.38",
     "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.4",
-    "vinxi": "^0.3.11",
+    "vinxi": "^0.3.12",
     "vite-plugin-cjs-interop": "^2.1.1",
     "vite-plugin-pwa": "^0.20.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@ai-sdk/solid": "^0.0.1",
+    "@ai-sdk/solid": "^0.0.3",
     "@ark-ui/solid": "^3.3.0",
-    "@aws-sdk/client-s3": "^3.596.0",
-    "@aws-sdk/s3-request-presigner": "^3.596.0",
+    "@aws-sdk/client-s3": "^3.598.0",
+    "@aws-sdk/s3-request-presigner": "^3.598.0",
     "@clerk/clerk-js": "^5.7.0",
     "@clerk/clerk-sdk-node": "^5.0.11",
     "@clerk/themes": "^2.1.9",
@@ -46,6 +46,8 @@
     "@langchain/community": "^0.2.11",
     "@langchain/core": "^0.2.6",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@solid-primitives/intersection-observer": "^2.1.6",
+    "@solid-primitives/keyed": "^1.2.2",
     "@solid-primitives/resize-observer": "^2.0.25",
     "@solid-primitives/share": "^2.0.6",
     "@solid-primitives/storage": "^3.7.1",
@@ -59,7 +61,7 @@
     "@theaistudybible/server": "workspace:*",
     "@upstash/ratelimit": "^1.2.1",
     "@upstash/redis": "^1.31.5",
-    "ai": "^3.1.35",
+    "ai": "^3.1.37",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.0.1",
@@ -69,11 +71,11 @@
     "iso-639-1": "^3.1.2",
     "langchain": "^0.2.5",
     "lucide-solid": "^0.395.0",
-    "simple-icons": "^12.2.0",
+    "simple-icons": "^12.3.0",
     "solid-js": "^1.8.17",
     "solid-marked": "^0.6.3",
     "sst": "^3.0.33",
-    "stripe": "^15.11.0",
+    "stripe": "^15.12.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
