--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "main": "tsconfig.json",
   "devDependencies": {
-    "@types/bun": "latest",
+    "@types/bun": "^1.1.5",
     "tsc-alias": "^1.8.10",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.2"
   }
 }
