--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,11 @@
 {
     "$schema": "https://turbo.build/schema.json",
+    "globalDependencies": [
+        ".env"
+    ],
+    "globalEnv": [
+        "*"
+    ],
     "tasks": {
         "build": {
             "dependsOn": [
