--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,7 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@clerk/types": "^4.6.0",
+    "@clerk/types": "^4.6.1",
     "@tanstack/eslint-plugin-query": "^5.43.1",
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
@@ -30,13 +30,13 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@ai-sdk/solid": "^0.0.3",
+    "@ai-sdk/solid": "^0.0.5",
     "@ark-ui/solid": "^3.3.0",
-    "@aws-sdk/client-s3": "^3.598.0",
-    "@aws-sdk/s3-request-presigner": "^3.598.0",
-    "@clerk/clerk-js": "^5.7.0",
-    "@clerk/clerk-sdk-node": "^5.0.11",
-    "@clerk/themes": "^2.1.9",
+    "@aws-sdk/client-s3": "^3.600.0",
+    "@aws-sdk/s3-request-presigner": "^3.600.0",
+    "@clerk/clerk-js": "^5.7.1",
+    "@clerk/clerk-sdk-node": "^5.0.12",
+    "@clerk/themes": "^2.1.10",
     "@corvu/drawer": "^0.2.1",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/sentry": "^1.1.0",
@@ -50,21 +50,22 @@
     "@solid-primitives/share": "^2.0.6",
     "@solid-primitives/storage": "^3.7.1",
     "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.13.5",
-    "@solidjs/start": "^1.0.1",
+    "@solidjs/router": "^0.13.6",
+    "@solidjs/start": "^1.0.2",
     "@tanstack/solid-query": "^5.45.0",
     "@tanstack/solid-query-devtools": "^5.45.0",
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
-    "ai": "^3.1.37",
+    "ai": "^3.2.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.0.1",
     "drizzle-orm": "^0.31.2",
     "drizzle-zod": "^0.5.1",
-    "hono": "^4.4.6",
+    "hono": "^4.4.7",
     "iso-639-1": "^3.1.2",
-    "lucide-solid": "^0.395.0",
+    "lucide-solid": "^0.396.0",
+    "rate-limiter-flexible": "^5.0.3",
     "simple-icons": "^12.3.0",
     "solid-js": "^1.8.17",
     "solid-marked": "^0.6.3",
