--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,15 @@ services:
     image: postgres
     ports:
       - 5432:5432
+    volumes:
+      - ./volumes/postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=theaistudybible
       - POSTGRES_PASSWORD=theaistudybible
       - POSTGRES_DB=theaistudybible
 
-  dragonfly:
-    image: docker.dragonflydb.io/dragonflydb/dragonfly
+  redis:
+    image: redis
     ports:
       - 6379:6379
 
@@ -17,6 +19,8 @@ services:
     image: qdrant/qdrant:v1.9.5
     ports:
       - 6333:6333
+    volumes:
+      - ./volumes/qdrant:/qdrant/storage
     environment:
       - QDRANT__SERVICE__API_KEY=theaistudybible
 
@@ -25,6 +29,8 @@ services:
     ports:
       - 9000:9000
       - 9001:9001
+    volumes:
+      - ./volumes/minio:/data
     environment:
       - MINIO_ROOT_USER=theaistudybible
       - MINIO_ROOT_PASSWORD=theaistudybible
