--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "start": "turbo start",
-    "scripts": "cd apps/scripts && bun run src/index.ts",
+    "build": "bun --env-file=.env turbo build",
+    "dev": "bun --env-file=.env turbo dev",
+    "start": "bun --env-file=.env turbo start",
+    "scripts": "bun --env-file=.env run ./apps/scripts/src/index.ts",
     "format": "turbo format",
     "lint": "turbo lint",
     "lint:fix": "turbo lint:fix",
-    "typecheck": "turbo typecheck"
+    "typecheck": "turbo typecheck",
+    "db:generate": "bun --env-file=.env drizzle-kit generate",
+    "db:migrate": "bun --env-file=.env drizzle-kit migrate",
+    "db:seed": "bun --env-file=.env run ./apps/scripts/src/index.ts db seed",
+    "db:studio": "bun --env-file=.env drizzle-kit studio"
   },
   "devDependencies": {
-    "bun": "^1.1.14",
+    "bun": "^1.1.16",
     "drizzle-kit": "^0.22.7",
-    "turbo": "^2.0.4",
+    "turbo": "^2.0.5",
     "vitest": "^1.6.0"
   },
   "workspaces": [
