--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -16,7 +16,7 @@
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-sonarjs": "^1.0.3",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "8.0.0-alpha.24"
+    "typescript": "^5.5.2",
+    "typescript-eslint": "7.14.1"
   }
 }
