--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "bun --env-file=.env turbo build",
-    "dev": "bun --env-file=.env turbo dev",
+    "dev": "concurrently -n \"docker-compose,turbo,drizzle-studio\" -c \"blue,yellow,red\" \"docker compose up\" \"bun --env-file=.env turbo dev\" \"bun run db:studio\"",
     "start": "bun --env-file=.env turbo start",
     "scripts": "bun --env-file=.env run ./apps/scripts/src/index.ts",
     "format": "turbo format",
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "bun": "^1.1.17",
+    "concurrently": "^8.2.2",
     "drizzle-kit": "^0.22.7",
     "turbo": "^2.0.5",
     "vitest": "^1.6.0"
