Removing model selector

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ R2_SECRET_ACCESS_KEY=
 UNSTRUCTURED_API_KEY=
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
+MISTRAL_API_KEY=
 
 # Email Auth
 EMAIL_SERVER_HOST=smtp.forwardemail.net
