--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -16,13 +16,16 @@
     "@theaistudybible/tsconfig": "workspace:*"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^0.0.24",
-    "@ai-sdk/openai": "^0.0.33",
-    "@qdrant/js-client-rest": "^1.9.0",
+    "@ai-sdk/anthropic": "^0.0.27",
+    "@ai-sdk/mistral": "^0.0.20",
+    "@ai-sdk/openai": "^0.0.34",
+    "@qdrant/js-client-rest": "^1.10.0",
     "@theaistudybible/core": "workspace:*",
-    "ai": "^3.2.10",
+    "ai": "^3.2.16",
     "drizzle-orm": "^0.31.2",
-    "openai": "^4.52.1",
+    "js-tiktoken": "^1.0.12",
+    "openai": "^4.52.3",
+    "tiktoken": "^1.0.15",
     "zod": "^3.23.8"
   }
 }
