--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,12 +15,12 @@
   },
   "devDependencies": {
     "@clerk/types": "^4.6.1",
-    "@tanstack/eslint-plugin-query": "^5.47.0",
+    "@tanstack/eslint-plugin-query": "^5.50.0",
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.4",
     "vinxi": "^0.3.12",
@@ -30,12 +30,12 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@ai-sdk/solid": "^0.0.8",
-    "@ark-ui/solid": "^3.4.0",
-    "@aws-sdk/client-s3": "^3.600.0",
-    "@aws-sdk/s3-request-presigner": "^3.600.0",
+    "@ai-sdk/solid": "^0.0.11",
+    "@ark-ui/solid": "^3.5.0",
+    "@aws-sdk/client-s3": "^3.609.0",
+    "@aws-sdk/s3-request-presigner": "^3.609.0",
     "@clerk/clerk-js": "^5.7.2",
-    "@clerk/clerk-sdk-node": "^5.0.12",
+    "@clerk/clerk-sdk-node": "^5.0.14",
     "@clerk/themes": "^2.1.10",
     "@corvu/drawer": "^0.2.1",
     "@hono/clerk-auth": "^2.0.0",
@@ -52,24 +52,25 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.13.6",
     "@solidjs/start": "^1.0.2",
-    "@tanstack/solid-query": "^5.48.0",
-    "@tanstack/solid-query-devtools": "^5.48.0",
+    "@tanstack/solid-query": "^5.49.1",
+    "@tanstack/solid-query-devtools": "^5.49.1",
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
-    "ai": "^3.2.11",
+    "ai": "^3.2.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.0.1",
+    "dayjs": "^1.11.11",
     "drizzle-orm": "^0.31.2",
     "drizzle-zod": "^0.5.1",
-    "hono": "^4.4.9",
+    "hono": "^4.4.11",
     "iso-639-1": "^3.1.2",
-    "lucide-solid": "^0.397.0",
+    "lucide-solid": "^0.400.0",
     "rate-limiter-flexible": "^5.0.3",
-    "simple-icons": "^12.4.0",
-    "solid-js": "^1.8.17",
+    "simple-icons": "^13.0.0",
+    "solid-js": "^1.8.18",
     "solid-marked": "^0.6.3",
-    "stripe": "^16.0.0",
+    "stripe": "^16.1.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
