--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,6 +14,7 @@
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
     "@types/nodemailer": "^6.4.15",
+    "@types/pg": "^8.11.6",
     "vitest": "^1.6.0"
   },
   "dependencies": {
