Chat window improvements

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -50,6 +50,7 @@
     "@solid-primitives/resize-observer": "^2.0.25",
     "@solid-primitives/share": "^2.0.6",
     "@solid-primitives/storage": "^3.7.1",
+    "@solid-primitives/transition-group": "^1.0.5",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.13.6",
     "@solidjs/start": "^1.0.2",
@@ -71,6 +72,7 @@
     "simple-icons": "^13.0.0",
     "solid-js": "^1.8.18",
     "solid-marked": "^0.6.3",
+    "solid-transition-group": "^0.2.3",
     "stripe": "^16.1.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
