--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -59,12 +59,14 @@
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
     "ai": "^3.2.16",
+    "bullmq": "^5.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.0.1",
     "dayjs": "^1.11.11",
     "drizzle-orm": "^0.31.2",
     "drizzle-zod": "^0.5.1",
+    "embla-carousel-solid": "^8.1.6",
     "hono": "^4.4.11",
     "iso-639-1": "^3.1.2",
     "lucide-solid": "^0.400.0",
