--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@clerk/types": "^4.6.1",
-    "@tanstack/eslint-plugin-query": "^5.50.0",
+    "@tanstack/eslint-plugin-query": "^5.50.1",
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
@@ -27,19 +27,19 @@
     "vite-plugin-cjs-interop": "^2.1.1",
     "vite-plugin-pwa": "^0.20.0",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "vitest": "^2.0.2"
   },
   "dependencies": {
-    "@ai-sdk/solid": "^0.0.11",
+    "@ai-sdk/solid": "^0.0.13",
     "@ark-ui/solid": "^3.5.0",
-    "@aws-sdk/client-s3": "^3.609.0",
-    "@aws-sdk/s3-request-presigner": "^3.609.0",
+    "@aws-sdk/client-s3": "^3.613.0",
+    "@aws-sdk/s3-request-presigner": "^3.613.0",
     "@clerk/clerk-js": "^5.7.2",
     "@clerk/clerk-sdk-node": "^5.0.14",
     "@clerk/themes": "^2.1.10",
-    "@corvu/drawer": "^0.2.1",
+    "@corvu/drawer": "^0.2.2",
     "@hono/clerk-auth": "^2.0.0",
-    "@hono/sentry": "^1.1.0",
+    "@hono/sentry": "^1.2.0",
     "@hono/zod-validator": "^0.2.2",
     "@internationalized/date": "^3.5.4",
     "@kobalte/core": "^0.13.3",
@@ -47,37 +47,37 @@
     "@solid-primitives/clipboard": "^1.5.10",
     "@solid-primitives/intersection-observer": "^2.1.6",
     "@solid-primitives/keyed": "^1.2.2",
-    "@solid-primitives/resize-observer": "^2.0.25",
+    "@solid-primitives/resize-observer": "^2.0.26",
     "@solid-primitives/share": "^2.0.6",
     "@solid-primitives/storage": "^3.7.1",
     "@solid-primitives/transition-group": "^1.0.5",
     "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.13.6",
+    "@solidjs/router": "^0.14.1",
     "@solidjs/start": "^1.0.2",
-    "@tanstack/solid-query": "^5.49.1",
-    "@tanstack/solid-query-devtools": "^5.49.1",
+    "@tanstack/solid-query": "^5.50.2",
+    "@tanstack/solid-query-devtools": "^5.50.2",
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
-    "ai": "^3.2.16",
-    "bullmq": "^5.8.4",
+    "@theaistudybible/tasks": "workspace:*",
+    "ai": "^3.2.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.0.1",
     "dayjs": "^1.11.11",
-    "drizzle-orm": "^0.31.2",
+    "drizzle-orm": "^0.32.0",
     "drizzle-zod": "^0.5.1",
     "embla-carousel-solid": "^8.1.6",
-    "hono": "^4.4.11",
+    "hono": "^4.4.12",
     "iso-639-1": "^3.1.2",
-    "lucide-solid": "^0.400.0",
+    "lucide-solid": "^0.407.0",
     "rate-limiter-flexible": "^5.0.3",
-    "simple-icons": "^13.0.0",
+    "simple-icons": "^13.1.0",
     "solid-js": "^1.8.18",
     "solid-marked": "^0.6.3",
     "solid-transition-group": "^0.2.3",
-    "stripe": "^16.1.0",
+    "stripe": "^16.2.0",
     "svix": "^1.24.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vitest": "^1.6.0",
