--- a/apps/scripts/package.json
+++ b/apps/scripts/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "typecheck": "tsc --noEmit",
+    "type-check": "tsc --noEmit",
     "lint": "prettier --check . && eslint .",
     "lint:fix": "prettier --write . && eslint .",
     "format": "prettier --write .",
