--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
     "dev": "vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start",
-    "typecheck": "tsc -noEmit",
+    "type-check": "tsc -noEmit",
     "test": "vitest",
     "lint": "prettier --check . && eslint .",
     "lint:fix": "prettier --write . && eslint .",
@@ -61,7 +61,7 @@
     "@theaistudybible/tasks": "workspace:*",
     "ai": "^3.2.19",
     "class-variance-authority": "^0.7.0",
-    "clerk-solidjs": "^0.2.1",
+    "clerk-solidjs": "1.0.3",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.0.1",
     "dayjs": "^1.11.11",
