--- a/apps/tasks/package.json
+++ b/apps/tasks/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@theaistudybible/tasks",
+  "description": "The AI Study Bible Tasks",
+  "private": true,
+  "version": "1.0.0",
   "module": "./src/index.ts",
   "type": "module",
   "scripts": {
