--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "theaistudybible",
+  "description": "The AI Study Bible",
+  "private": "true",
   "version": "1.0.0",
   "devDependencies": {
+    "@changesets/cli": "^2.27.7",
     "bun": "^1.1.18",
     "concurrently": "^8.2.2",
     "drizzle-kit": "^0.23.0",
@@ -9,20 +12,22 @@
     "vitest": "^2.0.2"
   },
   "packageManager": "bun@1.1.17",
-  "private": true,
   "scripts": {
     "build": "bun --env-file=.env turbo build",
-    "dev": "concurrently -n \"docker-compose,turbo,drizzle-studio\" -c \"blue,yellow,red\" \"docker compose up\" \"bun --env-file=.env turbo dev\" \"bun run db:studio\"",
-    "start": "bun --env-file=.env turbo start",
-    "scripts": "bun --env-file=.env run ./apps/scripts/src/index.ts",
-    "format": "turbo format",
-    "lint": "turbo lint",
-    "lint:fix": "turbo lint:fix",
-    "typecheck": "turbo typecheck",
+    "changeset": "changeset",
     "db:generate": "bun --env-file=.env drizzle-kit generate",
     "db:migrate": "bun --env-file=.env drizzle-kit migrate",
     "db:seed": "bun --env-file=.env run ./apps/scripts/src/index.ts db seed",
-    "db:studio": "bun --env-file=.env drizzle-kit studio"
+    "db:studio": "bun --env-file=.env drizzle-kit studio",
+    "dev": "concurrently -n \"docker-compose,turbo,drizzle-studio\" -c \"blue,yellow,red\" \"docker compose up\" \"bun --env-file=.env turbo dev\" \"bun run db:studio\"",
+    "format": "turbo format",
+    "lint:fix": "turbo lint:fix",
+    "lint": "turbo lint",
+    "release": "changeset publish",
+    "scripts": "bun --env-file=.env run ./apps/scripts/src/index.ts",
+    "start": "bun --env-file=.env turbo start",
+    "type-check": "turbo type-check",
+    "version": "changeset version"
   },
   "trustedDependencies": [
     "@clerk/shared",
