--- a/tools/eslint-config/package.json
+++ b/tools/eslint-config/package.json
@@ -7,16 +7,16 @@
   "type": "module",
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.6.0",
+    "@eslint/js": "^9.7.0",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
     "@types/eslint__eslintrc": "^2.1.1",
     "@types/eslint__js": "^8.42.3",
-    "eslint": "^9.6.0",
+    "eslint": "^9.7.0",
     "eslint-plugin-drizzle": "^0.2.3",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-sonarjs": "^1.0.3",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-sonarjs": "1.0.4-alpha.1",
     "typescript": "^5.5.3",
-    "typescript-eslint": "7.16.0"
+    "typescript-eslint": "7.16.1"
   }
 }
