--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.6",
     "vinxi": "^0.4.0",
+    "vite": "^5.3.4",
     "vite-plugin-cjs-interop": "^2.1.1",
     "vite-plugin-pwa": "^0.20.0",
     "vite-tsconfig-paths": "^4.3.2",
@@ -85,6 +86,6 @@
     "zod": "^3.23.8"
   },
   "engines": {
-    "bun": ">=1"
+    "node": ">=18"
   }
 }
