--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@clerk/types": "^4.8.0",
     "@theaistudybible/eslint-config": "workspace:*",
     "@theaistudybible/prettier-config": "workspace:*",
     "@theaistudybible/tsconfig": "workspace:*",
@@ -21,11 +22,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.616.0",
+    "@clerk/clerk-sdk-node": "^5.0.16",
     "@paralleldrive/cuid2": "^2.2.2",
     "ai": "^3.2.29",
     "axios": "^1.7.2",
     "axios-retry": "^4.4.1",
     "drizzle-orm": "^0.32.0",
-    "nodemailer": "^6.9.14"
+    "ioredis": "^5.4.1",
+    "nodemailer": "^6.9.14",
+    "pg": "^8.12.0"
   }
 }
