last commit for a while

--- a/apps/tasks/tsconfig.json
+++ b/apps/tasks/tsconfig.json
@@ -10,6 +10,6 @@
       "@theaistudybible/tasks/*": ["./src/*"]
     }
   },
-  "include": ["./src", "../../packages/core/globals.d.ts"],
+  "include": ["src", "../../packages/core/globals.d.ts"],
   "exclude": ["node_modules"]
 }
