--- a/apps/scripts/tsconfig.json
+++ b/apps/scripts/tsconfig.json
@@ -10,6 +10,6 @@
       "@theaistudybible/scripts/*": ["./src/*"]
     }
   },
-  "include": ["./src/**/*.ts", "../../packages/core/globals.d.ts"],
+  "include": ["src", "../../packages/core/globals.d.ts"],
   "exclude": ["node_modules"]
 }
