--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,21 @@
-NODE_ENV=development
+NODE_ENV=
 
 # Database
 DATABASE_URL=
 
-# Redis
+# Cache
 REDIS_URL=
 
+# Vector DB
+QDRANT_URL=
+QDRANT_API_KEY=
+
 # Storage
-R2_ENDPOINT=
-R2_BUCKET=
-R2_ACCESS_KEY_ID=
-R2_SECRET_ACCESS_KEY=
+S3_BUCKET=
+S3_ENDPOINT=
+S3_ACCESS_KEY=
+S3_SECRET_KEY=
+S3_BUCKET_PUBLIC_URL=
 
 # AI
 UNSTRUCTURED_API_KEY=
@@ -19,17 +24,17 @@ ANTHROPIC_API_KEY=
 MISTRAL_API_KEY=
 
 # Email Auth
-EMAIL_SERVER_HOST=smtp.forwardemail.net
-EMAIL_SERVER_PORT=587
-EMAIL_SERVER_USERNAME=postmaster@theaistudybible.com
+EMAIL_SERVER_HOST=
+EMAIL_SERVER_PORT=
+EMAIL_SERVER_USERNAME=
 EMAIL_SERVER_PASSWORD=
 
 # Admin User
-ADMIN_EMAIL=admin@theaistudybible.com
+ADMIN_EMAIL=
 ADMIN_PASSWORD=
 
 # Clerk
-CLERK_PUBLISHABLE_KEY=
+PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 CLERK_WEBHOOK_SECRET=
 
@@ -43,4 +48,3 @@ REVENUECAT_STRIPE_API_KEY=
 STRIPE_PUBLIC_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
-
