--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "vitest",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "upgrade": "bun update --save"
   },
   "devDependencies": {
     "@theaistudybible/tsconfig": "workspace:*"
