--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -27,12 +27,15 @@
     "vitest": "^2.0.5"
   },
   "dependencies": {
-    "@ai-sdk/solid": "^0.0.43",
+    "@ai-sdk/solid": "^0.0.44",
     "@ark-ui/solid": "^3.10.0",
     "@aws-sdk/client-s3": "^3.645.0",
     "@aws-sdk/s3-request-presigner": "^3.645.0",
     "@clerk/themes": "^2.1.27",
     "@corvu/drawer": "^0.2.2",
+    "@hono/clerk-auth": "^2.0.0",
+    "@hono/sentry": "^1.2.0",
+    "@hono/zod-validator": "^0.2.2",
     "@internationalized/date": "^3.5.5",
     "@kobalte/core": "^0.13.6",
     "@paralleldrive/cuid2": "^2.2.2",
@@ -42,13 +45,13 @@
     "@solid-primitives/keyed": "^1.2.2",
     "@solid-primitives/resize-observer": "^2.0.26",
     "@solid-primitives/share": "^2.0.6",
-    "@solid-primitives/storage": "^4.2.0",
+    "@solid-primitives/storage": "^4.2.1",
     "@solid-primitives/transition-group": "^1.0.5",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.3",
     "@solidjs/start": "^1.0.6",
-    "@tanstack/solid-query": "^5.54.2",
     "@tanstack/solid-query-devtools": "^5.54.2",
+    "@tanstack/solid-query": "^5.54.2",
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/schemas": "workspace:*",
@@ -57,13 +60,15 @@
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.1.0",
     "embla-carousel-solid": "^8.2.1",
+    "hono": "^4.5.11",
     "iso-639-1": "^3.1.3",
-    "lucide-solid": "^0.438.0",
+    "lucide-solid": "^0.439.0",
     "simple-icons": "^13.8.0",
     "solid-js": "^1.8.22",
     "solid-marked": "^0.6.3",
     "solid-sonner": "^0.2.8",
     "solid-transition-group": "^0.2.3",
+    "svix": "^1.32.0",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7"
