--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "lint": "eslint .",
     "postinstall": "sst install",
     "refresh": "sst refresh",
+    "remove": "sst remove",
     "scripts": "sst shell -- bun run ./tools/scripts/src/index.ts",
     "secret:set": "sst secret set",
     "secret:remove": "sst secret remove",
     "secret:list": "sst secret list",
     "type-check": "turbo run type-check",
-    "upgrade": "bun update --save && sst upgrade"
+    "upgrade": "bun update --latest --save && sst upgrade"
   },
   "devDependencies": {
     "@clerk/types": "^4.19.0",
@@ -49,11 +50,11 @@
     "@libsql/client": "^0.10.0",
     "@upstash/ratelimit": "^2.0.2",
     "@upstash/redis": "^1.34.0",
-    "ai": "^3.3.27",
+    "ai": "^3.3.28",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
-    "sst": "3.0.115",
+    "sst": "3.0.119",
     "stripe": "^16.10.0",
     "zod": "^3.23.8"
   },
