--- a/packages/ai/tsconfig.json
+++ b/packages/ai/tsconfig.json
@@ -16,6 +16,11 @@
       "@/scripts/*": ["../../tools/scripts/src/*"]
     }
   },
-  "include": ["../../packages/core/globals.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "../../packages/core/globals.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "../core/src/utils/credits/check-and-consume-credits.ts"
+  ],
   "exclude": ["node_modules"]
 }
