--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -15,12 +15,11 @@
     "@clerk/types": "^4.19.0",
     "@tanstack/eslint-plugin-query": "^5.53.0",
     "@theaistudybible/tsconfig": "workspace:*",
+    "@mdx-js/mdx": "2.3.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
     "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.10",
-    "vinxi": "^0.4.2",
-    "vite": "^5.4.3",
     "vite-plugin-cjs-interop": "^2.1.3",
     "vite-plugin-pwa": "^0.20.5",
     "vite-tsconfig-paths": "^5.0.1",
@@ -50,11 +49,13 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.3",
     "@solidjs/start": "^1.0.6",
+    "@stripe/stripe-js": "^4.4.0",
     "@tanstack/solid-query": "^5.55.4",
     "@tanstack/solid-query-devtools": "^5.55.4",
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/schemas": "workspace:*",
+    "@vinxi/plugin-mdx": "^3.7.2",
     "class-variance-authority": "^0.7.0",
     "clerk-solidjs": "^1.2.0",
     "clsx": "^2.1.1",
@@ -66,12 +67,14 @@
     "simple-icons": "^13.9.0",
     "solid-js": "^1.8.22",
     "solid-marked": "^0.6.3",
+    "solid-mdx": "^0.0.7",
     "solid-sonner": "^0.2.8",
     "solid-transition-group": "^0.2.3",
     "svix": "^1.32.0",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vinxi": "^0.4.2"
   },
   "engines": {
     "node": ">=18"
