--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -14,6 +14,7 @@
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/schemas": "workspace:*",
-    "hono": "^4.5.11"
+    "hono": "^4.5.11",
+    "svix": "^1.32.0"
   }
 }
