--- a/.github/workflows/pr-preview-cleanup.yml
+++ b/.github/workflows/pr-preview-cleanup.yml
@@ -1,11 +1,11 @@
-name: Deploy to production
+name: Cleanup PR Preview
 
-concurrency: production
+concurrency: ${{ github.workflow }}-${{ github.event.pull_request.number }}
 
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches: [master]
-  workflow_dispatch:
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -15,7 +15,7 @@ env:
   TURSO_API_KEY: ${{ secrets.TURSO_API_KEY }}
   UPSTASH_EMAIL: ${{ secrets.UPSTASH_EMAIL }}
   UPSTASH_API_KEY: ${{ secrets.UPSTASH_API_KEY }}
-  NODE_ENV: production
+  NODE_ENV: development
 
 jobs:
   deploy:
@@ -27,21 +27,9 @@ jobs:
       - name: CI setup
         uses: ./.github/actions/ci-setup
 
-      - name: Type check
-        run: bun run type-check
-
-      - name: Lint
-        run: bun run lint
-
       - name: Set SST Stage
         run: |
-          echo "production" > .sst/stage
+          echo "pr-${{ github.event.pull_request.number }}" > .sst/stage
 
-      - name: Deploy
-        run: bun run deploy
-
-      - name: Run DB migrations
-        run: bun run db:migrate
-
-      - name: Seed DB
-        run: bun run db:seed
+      - name: Remove
+        run: bun run remove
