--- a/turbo.json
+++ b/turbo.json
@@ -22,6 +22,20 @@
       "persistent": true,
       "cache": false
     },
-    "type-check": {}
+    "lint": {
+      "dependsOn": [
+        "^lint"
+      ]
+    },
+    "lint:fix": {
+      "dependsOn": [
+        "^lint:fix"
+      ]
+    },
+    "type-check": {
+      "dependsOn": [
+        "^type-check"
+      ]
+    }
   }
 }
