--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@theaistudybible/tsconfig": "workspace:*",
+    "@theaistudybible/eslint-config": "workspace:*",
+    "@theaistudybible/ts-config": "workspace:*",
     "@types/aws-lambda": "^8.10.145"
   },
   "dependencies": {
