--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "dev": "sst dev",
     "format:check": "prettier --check .",
     "format": "prettier --write .",
-    "lint:fix": "eslint --fix .",
-    "lint": "eslint .",
+    "lint:fix": "turbo run lint:fix",
+    "lint": "turbo run lint",
     "postinstall": "sst install",
     "refresh": "sst refresh",
     "remove": "sst remove",
@@ -27,21 +27,14 @@
   },
   "devDependencies": {
     "@clerk/types": "^4.20.1",
-    "@eslint/compat": "^1.1.1",
-    "@eslint/js": "^9.10.0",
-    "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.5.4",
     "drizzle-kit": "^0.24.2",
-    "eslint": "^9.10.0",
-    "eslint-plugin-drizzle": "^0.2.3",
-    "eslint-plugin-solid": "^0.14.3",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "rimraf": "^6.0.1",
     "turbo": "^2.1.1",
     "typescript": "^5.6.2",
-    "typescript-eslint": "8.5.0",
     "vitest": "^2.0.5"
   },
   "dependencies": {
