Revert "chore: refactor eslint into shared config"
This reverts commit c1684a210f02c4efea65f1539c970360ca4e43c2.

--- a/turbo.json
+++ b/turbo.json
@@ -22,20 +22,6 @@
       "persistent": true,
       "cache": false
     },
-    "lint": {
-      "dependsOn": [
-        "^lint"
-      ]
-    },
-    "lint:fix": {
-      "dependsOn": [
-        "^lint:fix"
-      ]
-    },
-    "type-check": {
-      "dependsOn": [
-        "^type-check"
-      ]
-    }
+    "type-check": {}
   }
 }
