--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -9,17 +9,17 @@
     "build": "vinxi build",
     "start": "vinxi start",
     "type-check": "tsc --noEmit",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "devDependencies": {
-    "@clerk/types": "^4.19.0",
+    "@clerk/types": "^4.20.1",
     "@tanstack/eslint-plugin-query": "^5.53.0",
     "@theaistudybible/tsconfig": "workspace:*",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
     "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.4.3",
+    "vite": "^5.4.4",
     "vite-plugin-cjs-interop": "^2.1.3",
     "vite-plugin-pwa": "^0.20.5",
     "vite-tsconfig-paths": "^5.0.1",
@@ -28,10 +28,10 @@
   },
   "dependencies": {
     "@ai-sdk/solid": "^0.0.44",
-    "@ark-ui/solid": "^3.10.0",
-    "@aws-sdk/client-s3": "^3.645.0",
-    "@aws-sdk/s3-request-presigner": "^3.645.0",
-    "@clerk/themes": "^2.1.27",
+    "@ark-ui/solid": "^3.11.0",
+    "@aws-sdk/client-s3": "^3.649.0",
+    "@aws-sdk/s3-request-presigner": "^3.649.0",
+    "@clerk/themes": "^2.1.29",
     "@corvu/drawer": "^0.2.2",
     "@hono/clerk-auth": "^2.0.0",
     "@hono/sentry": "^1.2.0",
@@ -61,7 +61,7 @@
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.1.0",
     "embla-carousel-solid": "^8.2.1",
-    "hono": "^4.5.11",
+    "hono": "^4.6.1",
     "iso-639-1": "^3.1.3",
     "lucide-solid": "^0.439.0",
     "simple-icons": "^13.9.0",
