--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "vitest",
+    "test": "vitest run",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
@@ -16,7 +16,7 @@
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/schemas": "workspace:*",
     "@upstash/vector": "^1.1.5",
-    "openai": "^4.58.2",
+    "openai": "^4.59.0",
     "tiktoken": "^1.0.16"
   }
 }
