--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "test": "vitest run",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
