--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -7,6 +7,7 @@
     "clean": "rimraf .output .vinxi",
     "dev": "vinxi dev",
     "build": "vinxi build",
+    "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/icon.svg",
     "start": "vinxi start",
     "type-check": "tsc --noEmit",
     "test": "vitest run"
@@ -15,16 +16,18 @@
     "@clerk/types": "^4.20.1",
     "@tanstack/eslint-plugin-query": "^5.53.0",
     "@theaistudybible/tsconfig": "workspace:*",
+    "@vite-pwa/assets-generator": "^0.2.6",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
+    "sharp": "^0.33.5",
     "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.11",
+    "vinxi": "^0.4.2",
     "vite": "^5.4.4",
     "vite-plugin-cjs-interop": "^2.1.3",
     "vite-plugin-pwa": "^0.20.5",
     "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.0.5",
-    "vinxi": "^0.4.2"
+    "vitest": "^2.0.5"
   },
   "dependencies": {
     "@ai-sdk/solid": "^0.0.44",
