--- a/package.json
+++ b/package.json
@@ -59,5 +59,5 @@
   "overrides": {
     "nitropack": "npm:nitropack-nightly@latest"
   },
-  "trustedDependencies": ["@clerk/shared", "esbuild"]
+  "trustedDependencies": ["@biomejs/biome", "@clerk/shared", "esbuild", "sharp"]
 }
