chore: remove tanstack query devtools, remove NODE_ENV

--- a/biome.json
+++ b/biome.json
@@ -30,7 +30,8 @@
         "noSvgWithoutTitle": "off"
       },
       "correctness": {
-        "useJsxKeyInIterable": "off"
+        "useJsxKeyInIterable": "off",
+        "noUnusedImports": "error"
       },
       "nursery": {
         "noReactSpecificProps": "error"
