--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -5,6 +5,10 @@ concurrency: production
 on:
   push:
     branches: [master]
+    paths-ignore:
+      - 'README.md'
+      - '.vscode'
+      - '.cursorrules'
   workflow_dispatch:
 
 env:
