--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -22,7 +22,6 @@
     "sharp": "^0.33.5",
     "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.11",
-    "vinxi": "^0.4.2",
     "vite-plugin-cjs-interop": "^2.1.3",
     "vite-plugin-pwa": "^0.20.5",
     "vite-tsconfig-paths": "^5.0.1",
@@ -59,7 +58,7 @@
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/schemas": "workspace:*",
     "class-variance-authority": "^0.7.0",
-    "clerk-solidjs": "^1.2.0",
+    "clerk-solidjs": "^1.2.1",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.1.0",
     "embla-carousel-solid": "^8.3.0",
@@ -73,7 +72,8 @@
     "solid-transition-group": "^0.2.3",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vinxi": "^0.4.2"
   },
   "engines": {
     "node": ">=18"
