--- a/package.json
+++ b/package.json
@@ -34,25 +34,25 @@
     "@biomejs/biome": "^1.9.0",
     "@clerk/types": "^4.20.1",
     "@types/bun": "^1.1.9",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.5.5",
     "drizzle-kit": "^0.24.2",
     "rimraf": "^6.0.1",
     "turbo": "^2.1.2",
     "typescript": "^5.6.2",
     "typescript-eslint": "8.5.0",
-    "vitest": "^2.1.0"
+    "vitest": "^2.1.1"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.651.0",
-    "@aws-sdk/s3-request-presigner": "^3.651.0",
+    "@aws-sdk/client-s3": "^3.651.1",
+    "@aws-sdk/s3-request-presigner": "^3.651.1",
     "@libsql/client": "^0.11.0",
     "@upstash/ratelimit": "^2.0.2",
     "@upstash/redis": "^1.34.0",
-    "ai": "^3.3.35",
-    "date-fns": "^3.6.0",
+    "ai": "^3.3.37",
+    "date-fns": "^4.0.0-beta.1",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
-    "sst": "3.1.8",
+    "sst": "3.1.10",
     "stripe": "^16.11.0",
     "zod": "^3.23.8"
   },
