--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -19,7 +19,7 @@
     "postcss": "^8.4.47",
     "sharp": "^0.33.5",
     "solid-devtools": "^0.30.1",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.12",
     "vite-plugin-cjs-interop": "^2.1.4",
     "vite-plugin-pwa": "^0.20.5",
     "vite-tsconfig-paths": "^5.0.1",
@@ -31,6 +31,7 @@
     "@aws-sdk/client-s3": "^3.651.1",
     "@aws-sdk/s3-request-presigner": "^3.651.1",
     "@corvu/drawer": "^0.2.2",
+    "@fontsource-variable/inter": "^5.1.0",
     "@fontsource/goldman": "^5.1.0",
     "@hono/sentry": "^1.2.0",
     "@hono/zod-validator": "^0.2.2",
@@ -49,7 +50,7 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.5",
     "@solidjs/start": "^1.0.6",
-    "@stripe/stripe-js": "^4.4.0",
+    "@stripe/stripe-js": "^4.5.0",
     "@tanstack/solid-query": "^5.56.2",
     "@tanstack/solid-query-devtools": "^5.56.2",
     "@theaistudybible/ai": "workspace:*",
@@ -58,9 +59,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.1.0",
+    "cropperjs": "^1.6.2",
     "embla-carousel-solid": "^8.3.0",
-    "hono": "^4.6.1",
-    "iso-639-1": "^3.1.3",
+    "hono": "^4.6.2",
     "lucide-solid": "^0.441.0",
     "solid-js": "^1.8.22",
     "solid-marked": "^0.6.3",
