--- a/package.json
+++ b/package.json
@@ -38,21 +38,23 @@
     "rimraf": "^6.0.1",
     "turbo": "^2.1.2",
     "typescript": "^5.6.2",
-    "typescript-eslint": "8.5.0",
+    "typescript-eslint": "8.6.0",
     "vitest": "^2.1.1"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.651.1",
+    "@aws-sdk/client-ses": "^3.651.1",
+    "@aws-sdk/client-sqs": "^3.651.1",
     "@aws-sdk/s3-request-presigner": "^3.651.1",
     "@libsql/client": "^0.12.0",
     "@upstash/ratelimit": "^2.0.3",
     "@upstash/redis": "^1.34.0",
-    "ai": "^3.3.39",
-    "date-fns": "^4.0.0",
+    "ai": "^3.3.40",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "lucia": "^3.2.0",
-    "sst": "3.1.11",
+    "sst": "3.1.13",
     "stripe": "^16.11.0",
     "zod": "^3.23.8"
   },
