--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "clean": "rimraf .output .vinxi",
     "dev": "vinxi dev",
-    "build": "vinxi build",
+    "build": "sst shell -- vinxi build",
     "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/icon.svg",
-    "start": "vinxi start",
+    "start": "sst shell -- vinxi start",
     "type-check": "tsc --noEmit",
     "test": "vitest run"
   },
@@ -33,12 +33,12 @@
     "@corvu/drawer": "^0.2.2",
     "@fontsource-variable/inter": "^5.1.0",
     "@fontsource/goldman": "^5.1.0",
-    "@hono/sentry": "^1.2.0",
     "@hono/zod-validator": "^0.2.2",
     "@internationalized/date": "^3.5.5",
     "@kobalte/core": "^0.13.6",
     "@modular-forms/solid": "^0.23.0",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@sentry/solidstart": "^8.30.0",
     "@solid-primitives/clipboard": "^1.5.10",
     "@solid-primitives/context": "^0.2.3",
     "@solid-primitives/intersection-observer": "^2.1.6",
