--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -22,14 +22,11 @@
     "tailwindcss": "^3.4.12",
     "vite-plugin-cjs-interop": "^2.1.4",
     "vite-plugin-pwa": "^0.20.5",
-    "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.1.1"
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "dependencies": {
     "@ai-sdk/solid": "^0.0.47",
     "@ark-ui/solid": "^3.12.1",
-    "@aws-sdk/client-s3": "^3.654.0",
-    "@aws-sdk/s3-request-presigner": "^3.654.0",
     "@corvu/drawer": "^0.2.2",
     "@fontsource-variable/inter": "^5.1.0",
     "@fontsource/goldman": "^5.1.0",
