--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "format": "biome format --write .",
     "lint:fix": "biome lint --write .",
     "lint": "biome lint .",
-    "postinstall": "sst install",
     "predeploy": "bun run format && bun run lint:fix",
     "refresh": "sst refresh",
     "remove": "sst remove",
@@ -46,15 +45,15 @@
     "@aws-sdk/client-ses": "^3.654.0",
     "@aws-sdk/client-sqs": "^3.654.0",
     "@aws-sdk/s3-request-presigner": "^3.654.0",
-    "@libsql/client": "0.12.0",
+    "@libsql/client": "0.14.0",
     "@upstash/ratelimit": "^2.0.3",
     "@upstash/redis": "^1.34.0",
-    "ai": "^3.3.43",
+    "ai": "^3.3.44",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "lucia": "^3.2.0",
-    "sst": "3.1.24",
+    "sst": "3.1.29",
     "stripe": "^16.12.0",
     "zod": "^3.23.8"
   },
@@ -63,5 +62,11 @@
   "overrides": {
     "nitropack": "npm:nitropack-nightly@latest"
   },
-  "trustedDependencies": ["@biomejs/biome", "@sentry/cli", "@sentry/profiling-node", "esbuild", "sharp"]
+  "trustedDependencies": [
+    "@biomejs/biome",
+    "@sentry/cli",
+    "@sentry/profiling-node",
+    "esbuild",
+    "sharp"
+  ]
 }
