--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@lucia-auth/adapter-drizzle": "^1.1.0",
+    "@noble/hashes": "^1.5.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@theaistudybible/schemas": "workspace:*",
-    "oslo": "^1.2.1"
+    "@theaistudybible/schemas": "workspace:*"
   }
 }
