--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -17,14 +17,10 @@ runs:
         restore-keys: |
           ${{ runner.os }}-turbo-
 
-    - name: Cache Bun install
-      uses: actions/cache@v4
-      with:
-        path: ~/.bun/install/cache
-        key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lockb') }}
-        restore-keys: |
-          ${{ runner.os }}-bun-
-
     - name: Install dependencies
       shell: bash
       run: bun install
+    
+    - name: Install SST Providers
+      shell: bash
+      run: bun sst install
