--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "clean": "rimraf .output .vinxi",
     "dev": "vinxi dev",
-    "build": "sst shell -- vinxi build",
+    "build": "vinxi build",
     "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/icon.svg",
-    "start": "sst shell -- vinxi start",
+    "start": "vinxi start",
     "type-check": "tsc --noEmit",
     "test": "vitest run"
   },
@@ -19,7 +19,7 @@
     "postcss": "^8.4.47",
     "sharp": "^0.33.5",
     "solid-devtools": "^0.30.1",
-    "tailwindcss": "^3.4.12",
+    "tailwindcss": "^3.4.13",
     "vite-plugin-cjs-interop": "^2.1.4",
     "vite-plugin-pwa": "^0.20.5",
     "vite-tsconfig-paths": "^5.0.1"
@@ -35,7 +35,6 @@
     "@kobalte/core": "^0.13.6",
     "@modular-forms/solid": "^0.23.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@sentry/profiling-node": "^8.31.0",
     "@sentry/solidstart": "^8.31.0",
     "@solid-primitives/clipboard": "^1.5.10",
     "@solid-primitives/context": "^0.2.3",
@@ -59,9 +58,9 @@
     "cmdk-solid": "^1.1.0",
     "cropperjs": "^1.6.2",
     "embla-carousel-solid": "^8.3.0",
-    "hono": "^4.6.2",
+    "hono": "^4.6.3",
     "lucide-solid": "^0.445.0",
-    "solid-js": "^1.8.22",
+    "solid-js": "^1.8.23",
     "solid-marked": "^0.6.3",
     "solid-sonner": "^0.2.8",
     "solid-transition-group": "^0.2.3",
