--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "turbo run build",
     "clean": "turbo run clean",
-    "clean-install": "rimraf bun.lockb --glob '**/node_modules' && bun install --no-cache",
+    "clean-install": "rimraf bun.lockb .sst --glob '**/node_modules' && bun install --no-cache && sst install",
     "db:generate": "sst shell -- drizzle-kit generate",
     "db:migrate": "sst shell -- drizzle-kit migrate",
     "db:seed": "sst shell -- bun run ./tools/scripts/src/index.ts db seed",
@@ -17,8 +17,7 @@
     "format": "biome format --write .",
     "lint:fix": "biome lint --write .",
     "lint": "biome lint .",
-    "postinstall": "sst install",
-    "predeploy": "bun run format && bun run lint:fix",
+    "prerelease": "bun run format && bun run lint:fix",
     "refresh": "sst refresh",
     "remove": "sst remove",
     "scripts": "sst shell -- bun run ./tools/scripts/src/index.ts",
@@ -33,28 +32,27 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.2",
     "@types/bun": "^1.1.10",
-    "@types/node": "^22.5.5",
+    "@types/node": "^22.6.1",
     "drizzle-kit": "^0.24.2",
     "rimraf": "^6.0.1",
     "turbo": "^2.1.2",
     "typescript": "^5.6.2",
-    "typescript-eslint": "8.6.0",
     "vitest": "^2.1.1"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.654.0",
+    "@aws-sdk/client-s3": "^3.657.0",
     "@aws-sdk/client-ses": "^3.654.0",
     "@aws-sdk/client-sqs": "^3.654.0",
-    "@aws-sdk/s3-request-presigner": "^3.654.0",
+    "@aws-sdk/s3-request-presigner": "^3.657.0",
     "@libsql/client": "0.14.0",
     "@upstash/ratelimit": "^2.0.3",
     "@upstash/redis": "^1.34.0",
-    "ai": "^3.4.0",
+    "ai": "^3.4.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "lucia": "^3.2.0",
-    "sst": "3.1.32",
+    "sst": "3.1.36",
     "stripe": "^16.12.0",
     "zod": "^3.23.8"
   },
