fix: add consistency to env vars, webapp sentry plugin

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -35,7 +35,8 @@
     "@kobalte/core": "^0.13.6",
     "@modular-forms/solid": "^0.23.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@sentry/solidstart": "^8.31.0",
+    "@sentry/bun": "^8.32.0",
+    "@sentry/solidstart": "^8.32.0",
     "@solid-primitives/clipboard": "^1.5.10",
     "@solid-primitives/context": "^0.2.3",
     "@solid-primitives/intersection-observer": "^2.1.6",
@@ -49,7 +50,7 @@
     "@solidjs/start": "^1.0.6",
     "@stripe/stripe-js": "^4.5.0",
     "@tanstack/solid-query": "^5.56.2",
-    "@tanstack/solid-query-devtools": "^5.56.2",
+    "@tanstack/solid-query-devtools": "^5.58.0",
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/schemas": "workspace:*",
@@ -59,8 +60,8 @@
     "cropperjs": "^1.6.2",
     "embla-carousel-solid": "^8.3.0",
     "hono": "^4.6.3",
-    "lucide-solid": "^0.445.0",
-    "solid-js": "^1.8.23",
+    "lucide-solid": "^0.446.0",
+    "solid-js": "^1.9.1",
     "solid-marked": "^0.6.3",
     "solid-sonner": "^0.2.8",
     "solid-transition-group": "^0.2.3",
