fit: pwa config [ci skip]

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf .output .vinxi",
     "dev": "vinxi dev",
     "build": "vinxi build",
-    "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/icon.svg",
+    "generate-pwa-assets": "pwa-assets-generator",
     "start": "vinxi start",
     "type-check": "tsc --noEmit",
     "test": "vitest run"
