--- a/biome.json
+++ b/biome.json
@@ -63,6 +63,7 @@
   },
   "javascript": {
     "formatter": {
+      "enabled": true,
       "quoteStyle": "single",
       "jsxQuoteStyle": "single",
       "semicolons": "always",
