--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -20,6 +20,7 @@
     "sharp": "^0.33.5",
     "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.13",
+    "tailwindcss-safe-area": "^0.6.0",
     "vite-plugin-cjs-interop": "^2.1.4",
     "vite-plugin-pwa": "^0.20.5",
     "vite-tsconfig-paths": "^5.0.1"
